fix footer overlap, add styles for filter/sort component, fix products grid display

--- a/beshop/scss/base/_layout.scss
+++ b/beshop/scss/base/_layout.scss
@@ -1,3 +1,7 @@
 .page-wrapper {
-  @include padding(0 20px);
+  @include padding(0 20px 70px);
+}
+
+.content-area {
+  @include padding(15px 0 0);
 }
