--- a/beshop/scss/components/_footer.scss
+++ b/beshop/scss/components/_footer.scss
@@ -9,6 +9,8 @@
   z-index: 100;
 
   .footer-buttons {
+    @include spacing(max-width, $site-width-default);
+    margin: 0 auto;
     display: flex;
     justify-content: space-around;
 
